--- a/src/app/avaliation/dobras/carter/carter.component.html
+++ b/src/app/avaliation/dobras/carter/carter.component.html
@@ -11,7 +11,7 @@
             <thead>
                 <tr>
                     <th>&nbsp;</th>
-                    <th class="th-top" *ngIf="pointer>=1">
+                    <th class="th-top" *ngIf="pointer>=1 && !addEval">
                         <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
                             {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                         </button>
@@ -29,61 +29,61 @@
              <tbody>
                  <tr>
                      <th><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
+                     <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
                      <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
                      <td *ngIf="addEval">
-                         <input class="hidde-arrows" name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
+                         <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
                               type="number">
                      </td>
                  </tr>
                  <tr>
                      <th><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
+                     <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
                      <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular | number: '': locale}}</td>
                      <td *ngIf="addEval">
-                         <input class="hidde-arrows" name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
+                         <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
                              type="number">
                      </td>
                  </tr>
                 <tr>
                     <th><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal | number: '': locale}}</td>
+                    <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].abdominal | number: '': locale}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal | number: '': locale}}</td>
                     <td *ngIf="addEval">
-                        <input class="hidde-arrows" name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                        <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
                             type="number">
                     </td>
                 </tr>
                 <tr>
                     <th><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural | number: '': locale}}</td>
+                    <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].crural | number: '': locale}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].crural | number: '': locale}}</td>
                     <td *ngIf="addEval">
-                        <input class="hidde-arrows" name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural"
+                        <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural"
                              type="number">
                     </td>
                 </tr>
                  <tr>
                      <th><span (click)="openHelpDialog('Geminal')">Geminal</span></th>
-                     <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal | number: '': locale}}</td>
+                     <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].geminal | number: '': locale}}</td>
                      <td *ngIf="pointer>=0">{{evaluation[pointer].geminal | number: '': locale}}</td>
                      <td *ngIf="addEval">
-                         <input class="hidde-arrows" name="geminal" #geminal="ngModel" [(ngModel)]="newEvaluation.geminal"
+                         <input name="geminal" #geminal="ngModel" [(ngModel)]="newEvaluation.geminal"
                              type="number">
                      </td>
                  </tr>
                  <tr>
                     <th><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
+                    <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
                     <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
                     <td *ngIf="addEval">
-                        <input class="hidde-arrows" name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
+                        <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
                             type="number">
                     </td>
                 </tr>
                  <tr>
                     <th>Média</th>
-                    <td *ngIf="pointer>=1">
+                    <td *ngIf="pointer>=1 && !addEval">
                         {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
                                               + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural
                                               + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca)
@@ -96,13 +96,13 @@
                           / 6 | number: '1-2-2': locale}}
                     </td>
                     <td *ngIf="addEval">
-                        <input class="hidde-arrows" name="c_xmedia" #c_xmedia="ngModel" [(ngModel)]="newEvaluation.c_xmedia"
+                        <input name="c_xmedia" #c_xmedia="ngModel" [(ngModel)]="newEvaluation.c_xmedia"
                             type="number">
                     </td>
                 </tr>
                  <tr>
                      <th>Somatório</th>
-                     <td *ngIf="pointer>=1">
+                     <td *ngIf="pointer>=1 && !addEval">
                         {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].subescapular
                             + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural
                             + +evaluation[pointer-1].geminal + +evaluation[pointer-1].suprailiaca
@@ -115,7 +115,7 @@
                            | number: '1-2-2': locale}}
                      </td>
                      <td *ngIf="addEval">
-                         <input class="hidde-arrows" name="c_xtot" #c_xtot="ngModel" [(ngModel)]="newEvaluation.c_xtot"
+                         <input name="c_xtot" #c_xtot="ngModel" [(ngModel)]="newEvaluation.c_xtot"
                              type="number">
                      </td>
                  </tr>
