--- a/src/app/avaliation/CardioPulmunar/rockport/rockport.component.html
+++ b/src/app/avaliation/CardioPulmunar/rockport/rockport.component.html
@@ -2,7 +2,7 @@
     <app-header-name></app-header-name>
     <div class="section">
         <h1 class="h1-title" i18n>Caminhada - Rockport - <small>1609 metros</small></h1>
-        <form #f="ngForm" (submit)="save(f.value)">
+        <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
             <input type="hidden" name="nafs" #nafs="ngModel" [ngModel]="newEvaluation.nafs">
             <input type="hidden" name="altura" #altura="ngModel" [ngModel]="newEvaluation.altura">
             <input type="hidden" name="peso" #peso="ngModel" [ngModel]="newEvaluation.peso">
@@ -13,7 +13,7 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
                                 {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                         </th>
                         <th class="th-top" *ngIf="pointer>=0">
@@ -27,95 +27,95 @@
                 <tbody>
                     <tr>
                         <th i18n>FC ao minuto 0'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min0 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min0 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min0 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number">
+                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number">
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC ao minuto 2'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min2 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min2 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min2 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min2" #min2="ngModel" [(ngModel)]="newEvaluation.min2" type="number">
+                            <input name="min2" #min2="ngModel" [(ngModel)]="newEvaluation.min2" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 4'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min4 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min4 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min4 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min4" #min4="ngModel" [(ngModel)]="newEvaluation.min4" type="number">
+                            <input name="min4" #min4="ngModel" [(ngModel)]="newEvaluation.min4" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 6'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min6 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min6 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min6 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number" >
+                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number" >
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC ao minuto 8'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min8 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min8 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min8 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number">
+                            <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 10'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min10 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min10 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min10 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number">
+                            <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 12'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min12 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min12 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min12 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number">
+                            <input name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number">
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC ao minuto 14'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min14 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min14 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min14 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min14" #min14="ngModel" [(ngModel)]="newEvaluation.min14" type="number">
+                            <input name="min14" #min14="ngModel" [(ngModel)]="newEvaluation.min14" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 16'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min16 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min16 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min16 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min16" #min16="ngModel" [(ngModel)]="newEvaluation.min16" type="number">
+                            <input name="min16" #min16="ngModel" [(ngModel)]="newEvaluation.min16" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 18'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min18 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min18 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min18 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="number">
+                            <input name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="number">
                         </td>
                     </tr>                  
                     <tr>
                         <th i18n>FC ao minuto 20'</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].min20 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min20 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].min20 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="min20" #min20="ngModel" [(ngModel)]="newEvaluation.min20" type="number">
+                            <input name="min20" #min20="ngModel" [(ngModel)]="newEvaluation.min20" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>Tempo Final</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_tempo | mask: '00:00'}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].c_tempo | mask: '00:00'}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_tempo | mask: '00:00'}}</td>
                         <td *ngIf="addEval">
                            <input  mask="00:00" name="c_tempo" #c_tempo="ngModel" [(ngModel)]="newEvaluation.c_tempo">
@@ -123,46 +123,46 @@
                     </tr>
                     <tr>
                         <th i18n>FC Final</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].fc | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].fc | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].fc | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number">
+                            <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number">
                         </td>
                     </tr>
                    <!--  resultados -->
                     <tr>
                         <th i18n><span (click)="openDialog('FC Estimada')">FC Estimada</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcestimada | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].c_fcestimada | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcestimada | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('FC Reserva')">FC Reserva</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcreserva | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].c_fcreserva | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('% FC Máxima Alcançada')">% FC Máx. Alcançada</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_percfcm | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].c_percfcm | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_percfcm | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Índice Aeróbico Funcional')">Índice Aeróbico Funcional (FAI)</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fai | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].c_fai | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_fai | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('VO2 Máximo Obtido')">VO2 Máx. Obtido</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2m | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].c_vo2m | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2m | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('VO2 Máximo Estimado')">VO2 Máx. Estimado</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2e | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].c_vo2e | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2e | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
