--- a/src/app/avaliation/antropometria/mayhew-et-al/mayhew-et-al.component.html
+++ b/src/app/avaliation/antropometria/mayhew-et-al/mayhew-et-al.component.html
@@ -10,7 +10,7 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
                             <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
                                 {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                             </button>
@@ -29,16 +29,16 @@
                 <tbody>
                     <tr>
                         <th>Pescoço</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].pescoco | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].pescoco | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].pescoco | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="pescoco" #pescoco="ngModel"
+                            <input name="pescoco" #pescoco="ngModel"
                                 [(ngModel)]="newEvaluation.pescoco" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Coxa</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].coxad | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].coxad | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].coxad | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input name="coxad" #coxad="ngModel" [(ngModel)]="newEvaluation.coxad" type="number"
@@ -47,10 +47,10 @@
                     </tr>
                     <tr>
                         <th><span>Peso</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].peso | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peso | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso"
+                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso"
                                 type="number">
                         </td>
                     </tr>
