--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
@@ -10,7 +10,7 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
                             <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
                                 {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                             </button>
@@ -29,31 +29,31 @@
                 <tbody>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Cintura')">Cintura</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cintura | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].cintura | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cintura | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="cintura" #cintura="ngModel"
+                            <input name="cintura" #cintura="ngModel"
                                 [(ngModel)]="newEvaluation.cintura" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Quadril')">Quadril</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadril | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].quadril | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].quadril | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="quadril" #quadril="ngModel"
+                            <input name="quadril" #quadril="ngModel"
                                 [(ngModel)]="newEvaluation.quadril" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openHelpDialog('Altura')">Altura</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].altura | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].altura | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
                         <th>Idade</th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].idade | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].idade | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].idade | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
