--- a/src/app/avaliation/antropometria/vogel/vogel.component.html
+++ b/src/app/avaliation/antropometria/vogel/vogel.component.html
@@ -10,7 +10,7 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
                             <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
                                 {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                             </button>
@@ -21,7 +21,7 @@
                             </button>
                         </th>
                         <th class="th-top" *ngIf="addEval">
-                            <input class="hidde-arrows" name="data" #data="ngModel" [(ngModel)]="newEvaluation.data"
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data"
                                 type="date">
                         </th>
                     </tr>
@@ -29,46 +29,46 @@
                 <tbody>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Pescoço')">Pescoço</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].pescoco | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].pescoco | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].pescoco | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="pescoco" #pescoco="ngModel"
+                            <input name="pescoco" #pescoco="ngModel"
                                 [(ngModel)]="newEvaluation.pescoco" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Antebraço direito')">Antebraço direito</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].antebracod | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].antebracod | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].antebracod | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="antebracod" #antebracod="ngModel"
+                            <input name="antebracod" #antebracod="ngModel"
                                 [(ngModel)]="newEvaluation.antebracod" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Abdominal (umbigo)')">Abdominal (umbigo)</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdomen2 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].abdomen2 | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].abdomen2 | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="abdomen2" #abdomen2="ngModel"
+                            <input name="abdomen2" #abdomen2="ngModel"
                                 [(ngModel)]="newEvaluation.abdomen2" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Abdominal (cintura)')">Abdominal (cintura)</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdomen | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].abdomen | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].abdomen | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="abdomen" #abdomen="ngModel"
+                            <input name="abdomen" #abdomen="ngModel"
                                 [(ngModel)]="newEvaluation.abdomen" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Quadril')">Quadril</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadril | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].quadril | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].quadril | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="quadril" #quadril="ngModel"
+                            <input name="quadril" #quadril="ngModel"
                                 [(ngModel)]="newEvaluation.quadril" type="number">
                         </td>
                     </tr>
