--- a/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
+++ b/src/app/avaliation/composicao-corporal/dexa/dexa.component.html
@@ -8,7 +8,7 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
                             <button type="button">
                                 {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                             </button>
@@ -26,132 +26,132 @@
                 <tbody>
                     <tr>
                         <th><span (click)="openDialog('Peso')">Peso</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].peso | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peso | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number">
+                            <input name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('% Gordura')">% Gordura</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].perc_gordura | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].perc_gordura | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].perc_gordura | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="perc_gordura" #perc_gordura="ngModel" [(ngModel)]="newEvaluation.perc_gordura" type="number">
+                            <input name="perc_gordura" #perc_gordura="ngModel" [(ngModel)]="newEvaluation.perc_gordura" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('DMO')">DMO</span> <small>(g/cm2)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].dmo | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].dmo | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].dmo | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="dmo" #dmo="ngModel" [(ngModel)]="newEvaluation.dmo" type="number">
+                            <input name="dmo" #dmo="ngModel" [(ngModel)]="newEvaluation.dmo" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('FAT')">FAT</span> <small>(g)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].fat | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].fat | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].fat | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="fat" #fat="ngModel" [(ngModel)]="newEvaluation.fat" type="number">
+                            <input name="fat" #fat="ngModel" [(ngModel)]="newEvaluation.fat" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('LEAN')">LEAN</span> <small>(g)</small></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].lean | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].lean | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].lean | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="lean" #lean="ngModel" [(ngModel)]="newEvaluation.lean" type="number">
+                            <input name="lean" #lean="ngModel" [(ngModel)]="newEvaluation.lean" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('Cabeça')">Cabeça</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cabeca | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].cabeca | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cabeca | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="cabeca" #cabeca="ngModel"
+                            <input name="cabeca" #cabeca="ngModel"
                                 [(ngModel)]="newEvaluation.cabeca" type="number">
                         </td>
                     </tr>
 
                     <tr>
                         <th><span (click)="openDialog('Membros Superiores')">Membros Superiores</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].membros_sup | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].membros_sup | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].membros_sup | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="membros_sup" #membros_sup="ngModel"
+                            <input name="membros_sup" #membros_sup="ngModel"
                                 [(ngModel)]="newEvaluation.membros_sup" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('Membros Inferiores')">Membros Inferiores</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].membros_inf | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].membros_inf | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].membros_inf | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="membros_inf" #membros_inf="ngModel"
+                            <input name="membros_inf" #membros_inf="ngModel"
                                 [(ngModel)]="newEvaluation.membros_inf" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('Coluna')">Coluna</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].coluna | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].coluna | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].coluna | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="coluna" #coluna="ngModel"
+                            <input name="coluna" #coluna="ngModel"
                                 [(ngModel)]="newEvaluation.coluna" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('Tronco')">Tronco</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tronco | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].tronco | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].tronco | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="tronco" #tronco="ngModel"
+                            <input name="tronco" #tronco="ngModel"
                                 [(ngModel)]="newEvaluation.tronco" type="number">
                         </td>
                     </tr>
 
                     <tr>
                         <th><span (click)="openDialog('Pelve')">Pelve</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].pelve | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].pelve | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].pelve | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="pelve" #pelve="ngModel" [(ngModel)]="newEvaluation.pelve" type="number">
+                            <input name="pelve" #pelve="ngModel" [(ngModel)]="newEvaluation.pelve" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('Costelas')">Costelas</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].costelas | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].costelas | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].costelas | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="costelas" #costelas="ngModel" [(ngModel)]="newEvaluation.costelas"
+                            <input name="costelas" #costelas="ngModel" [(ngModel)]="newEvaluation.costelas"
                                 type="number">
                         </td>
                     </tr>
                     <tr>
                         <th>Total</th>
-                        <td *ngIf="pointer>=1">{{getTotal(evaluation[pointer-1]) | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{getTotal(evaluation[pointer-1]) | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{getTotal(evaluation[pointer]) | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;
-                       <!--      <input class="hidde-arrows" name="tescore" #tescore="ngModel"
+                       <!--      <input name="tescore" #tescore="ngModel"
                                 [(ngModel)]="newEvaluation.tescore" type="number"> -->
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('T escore')">T escore</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tescore | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].tescore | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].tescore | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="tescore" #tescore="ngModel"
+                            <input name="tescore" #tescore="ngModel"
                                 [(ngModel)]="newEvaluation.tescore" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th><span (click)="openDialog('Z escore')">Z escore</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].zescore | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].zescore | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].zescore | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="zescore" #zescore="ngModel" [(ngModel)]="newEvaluation.zescore" type="number">
+                            <input name="zescore" #zescore="ngModel" [(ngModel)]="newEvaluation.zescore" type="number">
                         </td>
                     </tr>
               
