--- a/src/app/avaliation/dobras/jp3/jp3.component.html
+++ b/src/app/avaliation/dobras/jp3/jp3.component.html
@@ -11,7 +11,7 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
                             <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
                                 {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                             </button>
@@ -29,57 +29,57 @@
                 <tbody>
                     <tr *ngIf="student.sexo == 'M'">
                         <th i18n><span (click)="openHelpDialog('Peitoral')">Peitoral</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].peitoral | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="peitoral" #peitoral="ngModel" [(ngModel)]="newEvaluation.peitoral"
+                            <input name="peitoral" #peitoral="ngModel" [(ngModel)]="newEvaluation.peitoral"
                                 type="number">
                         </td>
                     </tr>
                     <tr *ngIf="student.sexo == 'F'">
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
+                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
                                 type="number">
                         </td>
                     </tr>
                     <tr *ngIf="student.sexo == 'M'">
                         <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].abdominal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
                                 type="number">
                         </td>
                     </tr>
                     <tr *ngIf="student.sexo == 'F'">
                         <th i18n><span (click)="openHelpDialog('Suprailíaca')">Suprailíaca</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
+                            <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
                                 type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].crural | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural" type="number">
+                            <input name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Media')">Média</span></th>
-                        <td *ngIf="pointer>=1 && student.sexo=='M'">
+                        <td *ngIf="pointer>=1 && !addEval && student.sexo=='M'">
                             {{(+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural) / 3 | number : '1.2-2': locale}}
                         </td>
                         <td *ngIf="pointer>=0 && student.sexo=='M'">
                             {{(+evaluation[pointer].peitoral + +evaluation[pointer].abdominal + +evaluation[pointer].crural) / 3 | number : '1.2-2': locale}}
                         </td>
-                        <td *ngIf="pointer>=1 && student.sexo=='F'">
+                        <td *ngIf="pointer>=1 && !addEval && student.sexo=='F'">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].crural) / 3 | number : '1.2-2': locale}}
                         </td>
                         <td *ngIf="pointer>=0 && student.sexo=='F'">
@@ -89,13 +89,13 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Somatório')">Somatório</span></th>
-                        <td *ngIf="pointer>=1 && student.sexo=='M'">
+                        <td *ngIf="pointer>=1 && !addEval && student.sexo=='M'">
                             {{+evaluation[pointer-1].peitoral + +evaluation[pointer-1].abdominal + +evaluation[pointer-1].crural | number : '1.2-2': locale}}
                         </td>
                         <td *ngIf="pointer>=0 && student.sexo=='M'">
                             {{+evaluation[pointer].peitoral + +evaluation[pointer].abdominal + +evaluation[pointer].crural | number : '1.2-2': locale}}
                         </td>
-                        <td *ngIf="pointer>=1 && student.sexo=='F'">
+                        <td *ngIf="pointer>=1 && !addEval && student.sexo=='F'">
                             {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca + +evaluation[pointer-1].crural | number : '1.2-2': locale}}
                         </td>
                         <td *ngIf="pointer>=0 && student.sexo=='F'">
