--- a/src/app/avaliation/dobras/sloan/sloan.component.html
+++ b/src/app/avaliation/dobras/sloan/sloan.component.html
@@ -11,7 +11,7 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
                             <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
                                 {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
                             </button>
@@ -29,7 +29,7 @@
                 <tbody>
                     <tr *ngIf="sexo=='M'">
                         <th i18n><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
@@ -38,7 +38,7 @@
                     </tr>
                     <tr *ngIf="sexo=='F'">
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="triciptal" #tricipital="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number">
@@ -46,7 +46,7 @@
                     </tr>
                     <tr *ngIf="sexo=='M'">
                         <th i18n><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].crural | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="crural" #crural="ngModel" [(ngModel)]="newEvaluation.crural" type="number">
@@ -54,7 +54,7 @@
                     </tr>
                     <tr *ngIf="sexo=='F'">
                         <th i18n><span (click)="openHelpDialog('Suprailíaca')">Suprailíaca</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca" type="number">
@@ -62,10 +62,10 @@
                     </tr>
                     <tr>
                         <th i18n>Média</th>
-                        <td *ngIf="pointer>=1 && sexo =='M'">
+                        <td *ngIf="pointer>=1 && !addEval && sexo =='M'">
                             {{(+evaluation[pointer-1].subescapular + +evaluation[pointer-1].crural) / 2 |number: '1.2-2': locale}}
                         </td>
-                        <td *ngIf="pointer>=1 && sexo =='F'">
+                        <td *ngIf="pointer>=1 && !addEval && sexo =='F'">
                             {{(+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca) / 2 |number: '1.2-2': locale}}
                         </td>
                         <td *ngIf="pointer>=0 && sexo == 'M'">
@@ -78,10 +78,10 @@
                     </tr>
                     <tr>
                         <th i18n>Somatório</th>
-                        <td *ngIf="pointer>=1 && sexo =='M'">
+                        <td *ngIf="pointer>=1 && !addEval && sexo =='M'">
                             {{+evaluation[pointer-1].subescapular + +evaluation[pointer-1].crural |number: '1.2-2': locale}}
                         </td>
-                        <td *ngIf="pointer>=1 && sexo =='F'">
+                        <td *ngIf="pointer>=1 && !addEval && sexo =='F'">
                             {{+evaluation[pointer-1].triciptal + +evaluation[pointer-1].suprailiaca |number: '1.2-2': locale}}
                         </td>
                         <td *ngIf="pointer>=0 && sexo == 'M'">
