--- a/src/app/avaliation/flexibilidade/fleximetro/fleximetro.component.html
+++ b/src/app/avaliation/flexibilidade/fleximetro/fleximetro.component.html
@@ -7,7 +7,7 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</th>
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</th>
                         <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
                         <th class="th-top" *ngIf="addEval">
                             <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
@@ -20,26 +20,26 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Cervical - Flexão/Extensão')">Flexão/Extensão</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].cervicale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cervicale}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number">
+                            <input name="cervicale" #cervicale="ngModel" [(ngModel)]="newEvaluation.cervicale" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Cervical - Flexão Lateral')">Flexão Lateral</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicall}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].cervicall}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cervicall}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="cervicall" #cervicall="ngModel" [(ngModel)]="newEvaluation.cervicall" type="number">
+                            <input name="cervicall" #cervicall="ngModel" [(ngModel)]="newEvaluation.cervicall" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Cervical - Rotação')">Rotação</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cervicalr}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].cervicalr}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cervicalr}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number">
+                            <input name="cervicalr" #cervicalr="ngModel" [(ngModel)]="newEvaluation.cervicalr" type="number">
                         </td>
                     </tr>
 
@@ -48,26 +48,26 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Ombro - Flexão/Extensão')">Flexão/Extensão</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].ombrof}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].ombrof}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].ombrof}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="ombrof" #ombrof="ngModel" [(ngModel)]="newEvaluation.ombrof" type="number">
+                            <input name="ombrof" #ombrof="ngModel" [(ngModel)]="newEvaluation.ombrof" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Ombro - Adução/Abdução')">Adução/Abdução</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].ombroad}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].ombroad}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].ombroad}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="ombroad" #ombroad="ngModel" [(ngModel)]="newEvaluation.ombroad" type="number">
+                            <input name="ombroad" #ombroad="ngModel" [(ngModel)]="newEvaluation.ombroad" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Ombro - Rotação')">Rotação</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].ombromedial}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].ombromedial}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].ombromedial}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="ombromedial" #ombromedial="ngModel" [(ngModel)]="newEvaluation.ombromedial" type="number">
+                            <input name="ombromedial" #ombromedial="ngModel" [(ngModel)]="newEvaluation.ombromedial" type="number">
                         </td>
                     </tr>
 
@@ -76,10 +76,10 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Cotovelo - Flexão/Extensão')">Flexão/Extensão</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].cotovelof}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].cotovelof}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cotovelof}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="cotovelof" #cotovelof="ngModel" [(ngModel)]="newEvaluation.cotovelof" type="number">
+                            <input name="cotovelof" #cotovelof="ngModel" [(ngModel)]="newEvaluation.cotovelof" type="number">
                         </td>
                     </tr>
  
@@ -88,10 +88,10 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Antebraço - Supinação/Pronação')">Supinação/Pronação</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].antbsp}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].antbsp}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].antbsp}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="antbsp" #antbsp="ngModel" [(ngModel)]="newEvaluation.antbsp" type="number">
+                            <input name="antbsp" #antbsp="ngModel" [(ngModel)]="newEvaluation.antbsp" type="number">
                         </td>
                     </tr>
 
@@ -100,18 +100,18 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Punho - Flexão/Extensão')">Flexão/Extensão</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].punhof}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].punhof}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].punhof}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="punhof" #punhof="ngModel" [(ngModel)]="newEvaluation.punhof" type="number">
+                            <input name="punhof" #punhof="ngModel" [(ngModel)]="newEvaluation.punhof" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Punho - Desvio Ulnar/Radial')">Desvio Ulnar/Radial</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].punhoe}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].punhoe}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].punhoe}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="punhoe" #punhoe="ngModel" [(ngModel)]="newEvaluation.punhoe" type="number">
+                            <input name="punhoe" #punhoe="ngModel" [(ngModel)]="newEvaluation.punhoe" type="number">
                         </td>
                     </tr>
 
@@ -120,26 +120,26 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Quadril - Flexão/Extensão')">Flexão/Extensão</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadrilf}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].quadrilf}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].quadrilf}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="quadrilf" #quadrilf="ngModel" [(ngModel)]="newEvaluation.quadrilf" type="number">
+                            <input name="quadrilf" #quadrilf="ngModel" [(ngModel)]="newEvaluation.quadrilf" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Quadril - Adução/Abdução')">Adução/Abdução</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadrilad}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].quadrilad}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].quadrilad}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="quadrilad" #quadrilad="ngModel" [(ngModel)]="newEvaluation.quadrilad" type="number">
+                            <input name="quadrilad" #quadrilad="ngModel" [(ngModel)]="newEvaluation.quadrilad" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Quadril - Rotação')">Rotação</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].quadrilmedial}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].quadrilmedial}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].quadrilmedial}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="quadrilmedial" #quadrilmedial="ngModel" [(ngModel)]="newEvaluation.quadrilmedial" type="number">
+                            <input name="quadrilmedial" #quadrilmedial="ngModel" [(ngModel)]="newEvaluation.quadrilmedial" type="number">
                         </td>
                     </tr>
 
@@ -148,10 +148,10 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Joelho - Flexão/Extensão')">Flexão/Extensão</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].joelhof}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].joelhof}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].joelhof}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="joelhof" #joelhof="ngModel" [(ngModel)]="newEvaluation.joelhof" type="number">
+                            <input name="joelhof" #joelhof="ngModel" [(ngModel)]="newEvaluation.joelhof" type="number">
                         </td>
                     </tr>
 
@@ -160,18 +160,18 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Tornozelo - Flexão Dorsal/Planar')">Flexão Dorsal/Plantar</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tornozelod}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].tornozelod}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].tornozelod}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="tornozelod" #tornozelod="ngModel" [(ngModel)]="newEvaluation.tornozelod" type="number">
+                            <input name="tornozelod" #tornozelod="ngModel" [(ngModel)]="newEvaluation.tornozelod" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Tornozelo - Inversão/Eversão')">Inversão/Eversão</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tornozelop}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].tornozelop}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].tornozelop}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="tornozelop" #tornozelop="ngModel" [(ngModel)]="newEvaluation.tornozelop" type="number">
+                            <input name="tornozelop" #tornozelop="ngModel" [(ngModel)]="newEvaluation.tornozelop" type="number">
                         </td>
                     </tr>
 
@@ -180,26 +180,26 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Tronco - Flexão/Extensão')">Flexão/Extensão</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].lombarf}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].lombarf}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].lombarf}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="lombarf" #lombarf="ngModel" [(ngModel)]="newEvaluation.lombarf" type="number">
+                            <input name="lombarf" #lombarf="ngModel" [(ngModel)]="newEvaluation.lombarf" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Tronco - Flexão Lateral')">Flexão Lateral</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].lombarl}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].lombarl}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].lombarl}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="lombarl" #lombarl="ngModel" [(ngModel)]="newEvaluation.lombarl" type="number">
+                            <input name="lombarl" #lombarl="ngModel" [(ngModel)]="newEvaluation.lombarl" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openDialog('Tronco - Rotação')">Rotação</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].lombarr}}</td>
+                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].lombarr}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].lombarr}}</td>
                         <td *ngIf="addEval">
-                            <input class="hidde-arrows" name="lombarr" #lombarr="ngModel" [(ngModel)]="newEvaluation.lombarr" type="number">
+                            <input name="lombarr" #lombarr="ngModel" [(ngModel)]="newEvaluation.lombarr" type="number">
                         </td>
                     </tr>
 
